@@ -4,6 +4,7 @@ disable_root: 1
 preserve_hostname: False
 
 cloud_config_modules:
+ - resizefs
  - mounts
  - rsyslog
  - ssh-import-id
