@@ -275,3 +275,9 @@ rsyslog:
  - filename: 01-examplecom.conf
    content: |
    *.*   @@syslogd.example.com
+
+# resize_rootfs should the / filesytem be resized on first boot
+# this allows you to launch an instance with a larger disk / partition
+# and have the instance automatically grow / to accomoddate it
+# set to 'False' to disable
+resize_rootfs: True
